# coursera-data-science

./: .gitignore  Jupiter Notebook.ipynb  README.md  index.html  pyproject.toml
data-analysis-with-python/: DA0101EN-Review-Data-Wrangling.ipynb  DA0101EN-Review-Exploratory-Data-Analysis.ipynb  DA0101EN-Review-Introduction.ipynb  DA0101EN-Review-Model-Development.ipynb  DA0101EN-Review-Model-Evaluation-and-Refinement.ipynb  clean_df.csv  da0101en_coursera_labb.ipynb
data-science-methodology/: DS0103EN-1-1-1-From-Problem-to-Approach-v2.0.ipynb  DS0103EN-2-2-1-From-Requirements-to-Collection-py-v2.0.ipynb  DS0103EN-3-3-1-From-Understanding-to-Preparation-py-v2.0.ipynb  DS0103EN-4-4-1-From-Modeling-to-Evaluation-py-v2.0.ipynb  bamboo_train_tree.dot
data-visualization-with-python/: DV0101EN-1-1-1-Introduction-to-Matplotlib-and-Line-Plots-py-v2.0.ipynb  DV0101EN-Exercise-Area-Plots-Histograms-and-Bar-Charts.ipynb  DV0101EN-Exercise-Generating-Maps-in-Python.ipynb  DV0101EN-Exercise-Pie-Charts-Box-Plots-Scatter-Plots-and-Bubble-Plots.ipynb  DV0101EN-Exercise-Waffle-Charts-Word-Clouds-and-Regression-Plots.ipynb  Final-Assignment.ipynb
databases-and-sql-for-data-science/: DB0201EN-Week3-1-1-Connecting-v4-py.ipynb  DB0201EN-Week3-1-2-Querying-v4-py.ipynb  DB0201EN-Week3-1-3-SQLmagic-v3-py.ipynb  DB0201EN-Week3-1-4-Analyzing-v5-py.ipynb  DB0201EN-Week4-2-2-PeerAssign-v5-py.ipynb  import_csv.sql  week1_lab1.db  week2_lab_1_query_2.csv  week2_lab_1_query_3.csv  week2_lab_1_query_4a.csv  week2_lab_1_query_4b.csv  week2_lab_1_query_5e.csv  week_3_lab5.sql
(+72 files in other folders)
