[tool.poetry]
name = "coursera-data-science"
version = "0.1.0"
description = ""
authors = ["Robert Barrimond <robert@barrimond.com>"]
readme = "README.md"
packages = [{include = "coursera_data_science"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.1"
requests = "^2.31.0"
scikit-learn = "^1.2.2"
ipykernel = "^6.23.1"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
